crates/daemon/tests/snapshots/cli_help__cli_help_contacts_refresh.snap
---
source: crates/daemon/tests/cli_help.rs
expression: stdout
---
Force a full refresh of the materialized `contacts` table

Usage: mxr contacts refresh

Options:
  -h, --help  Print help
