crates/daemon/tests/snapshots/cli_help__cli_help_corrections.snap
---
source: crates/daemon/tests/cli_help.rs
expression: stdout
---
Every move, sender mode and Not-sure answer, newest first

Usage: mxr corrections [OPTIONS] [COMMAND]

Commands:
  undo  Put a move back exactly as it was. Undoing twice changes nothing
  help  Print this message or the help of the given subcommand(s)

Options:
      --account <ACCOUNT>  Limit to one account; the default covers every account
      --limit <LIMIT>      [default: 50]
      --format <FORMAT>    [possible values: table, json, jsonl, csv, ids]
  -h, --help               Print help
