crates/daemon/tests/snapshots/cli_help__cli_help_count.snap
---
source: crates/daemon/tests/cli_help.rs
expression: stdout
---
Count matching messages

Usage: mxr count [OPTIONS] <QUERY>

Arguments:
  <QUERY>

Options:
      --account <ACCOUNT>
      --mode <MODE>        [possible values: lexical, hybrid, semantic]
      --format <FORMAT>    [possible values: table, json, jsonl, csv, ids]
  -h, --help               Print help
