crates/daemon/tests/snapshots/cli_help__cli_help_daemon.snap
---
source: crates/daemon/tests/cli_help.rs
expression: stdout
---
Start the daemon explicitly

Usage: mxr daemon [OPTIONS] [COMMAND]

Commands:
  dial-stdio  Pipe raw bytes between stdin/stdout and the local daemon's Unix socket (the Docker `connhelper` model). Lets any transport that can exec a process and pipe stdio reach the daemon — for example `ssh -T host mxr daemon dial-stdio` or `docker exec -i <container> mxr daemon dial-stdio`. The caller still needs local Unix-socket access on the daemon's machine, so this adds no new trust surface
  help        Print this message or the help of the given subcommand(s)

Options:
      --foreground                 Run in foreground (for debugging / systemd)
      --no-bridge                  Disable the HTTP bridge for this daemon run, regardless of config
      --bridge-port <BRIDGE_PORT>  Override the bridge port. Useful for tests and ephemeral bridges
  -h, --help                       Print help
