crates/daemon/tests/snapshots/cli_help__cli_help_decisions.snap
---
source: crates/daemon/tests/cli_help.rs
assertion_line: 14
expression: stdout
---
List or rebuild the citation-backed decision log

Usage: mxr decisions [OPTIONS] [COMMAND]

Commands:
  rebuild  Re-extract decisions from every thread within --since N days. Idempotent on unchanged thread content
  help     Print this message or the help of the given subcommand(s)

Options:
      --account <ACCOUNT>
      --topic <TOPIC>
      --since <SINCE_DAYS>
      --limit <LIMIT>       [default: 50]
      --format <FORMAT>     [possible values: table, json, jsonl, csv, ids]
  -h, --help                Print help
