crates/daemon/tests/snapshots/cli_help__cli_help_decisions_show.snap
---
source: crates/daemon/tests/cli_help.rs
assertion_line: 14
expression: stdout
---
Show a single decision row by its id (returned by `mxr decisions --format json|ids`). Exits non-zero when the id is unknown so scripts can branch on presence

Usage: mxr decisions show [OPTIONS] <ID>

Arguments:
  <ID>

Options:
      --format <FORMAT>  [possible values: table, json, jsonl, csv, ids]
  -h, --help             Print help
